<resources>
    <string name="app_name">InvestmentTracker</string>
    <string name="text_home">Home</string>
    <string name="text_exp">Explore</string>
    <string name="text_fav">Favourite</string>
    <string name="text_port">Portfolio</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_portValueInPrec">Portfolio allocation in %</string>
    <string name="text_allocatedcoins">Money allocated to coins</string>
    <string name="text_Tips">Tips</string>
    <string name="news">News</string>
    <string name="strategies">Strategies</string>
    <string name="technicals">Technicals</string>
    <string name="search_coins">Search Coins</string>
    <string name="todo">TODO</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="spot_trading"><b>Spot trading</b> \nis the process of buying and selling digital assets such
            as Bitcoin and Ethereum for immediate delivery. In other words, cryptocurrencies are directly
            transferred between market participants (buyers and sellers). In a spot market, you have
            direct ownership of cryptocurrencies and are entitled to legal rights such as voting for
            major forks or staking participation.</string>

    <string name="Margin_trading"><b>Margin trading</b> \nis a method of trading assets using funds provided
            by a third party. When compared to regular trading accounts, margin accounts allow traders
            to access greater sums of capital, allowing them to leverage their positions.
            Essentially, margin trading amplifies trading results so that traders are able to realize larger
            profits on successful trades. For example, to open a $100,000 trade at a leverage of 10:1,
            a trader would need to commit $10,000 of their capital.</string>
    <string name="fibonaci_text"><b>Fibonacci</b> \ncan be used to predict the extent of a digital asset correction from spot rates. This helps in identifying potential support and resistance levels before trend continuation.</string>
    <string name="ma_text"><b>Moving average</b> \nis used to help smooth out the price data by creating a constantly updated average price. By calculating the moving average, the impacts of random, short-term fluctuations on the price of a stock over a specified time-frame are mitigated.</string>
    <string name="rsi_text"><b>RSI</b> \nmeasures the “strength” of dynamics and the trend of the price of a digital asset. Accordingly, it helps to determine overbought and oversold conditions. The RSI oscillates between 0 and 100. The mid-line, 50, separates between bearish and bullish conditions. Once the RSI number is above 70, the digital asset may be overbought and considered bearish. The same will happen if the RSI index number is below 30, the digital asset can be said to be oversold and therefore bullish.</string>
    <string name="bb_text"><b>Bollinger bands</b> \nhelps its user determine whether prices are moving within their typical range or there is a shift. It is useful in measuring volatility and determining trends.</string>
    <string name="indicators_text"><b>Indicators</b> are tools used by traders. All of them interact in one way or another affecting prices. Most common used in crypto are Moving averages (MA), Relative Strenght Index (RSI), Bollinger bands and Fibonacci retracement.</string>
    <string name="fomo_text"><b>FOMO</b> stands for »Fear of missing out« and many new traders who are new to trading are entering markets when prices are at all time high or just overbought. Key thing to avoid FOMO is to get good at technical analysis, know where market is headed and also look into fundamentals of the project you are investing in. If you do get stuck high, than fundamentals might just save you from panic selling because you will know and believe in project you just invested.</string>
    <string name="hodl_text"><b>“HODL”</b> is a cryptocurrency-related slang that stands for the word “hold” misspelled. “HODL” also acts as an acronym for “Hold on for dear life.” The word “hold” has been used in finance for a very long time as part of the buy-and-hold strategy. This investing method involves buying a financial asset and holding it for an indefinite period of time.</string>
    <string name="hodl2_text">The biggest reason why “hodl” has become such a popular term is the general volatility of the prices of cryptocurrencies. Many cryptocurrency tokens, even relatively stable ones such as Bitcoin and Ethereum, frequently have very volatile market swings. The cost of these tokens can fall 100% one month and then rise 300% within the next few months so “HODL” is viewed as a way to combat these swings in price.</string>
    <string name="fa_text"><b>Fundamental analysis (FA)</b> is an approach used by investors to establish the intrinsic value of an asset or business. By looking at a number of internal and external factors, their main goal is to determine whether said asset or business is overvalued or undervalued.</string>
    <string name="fa1_text">On-chain metrics to check out when looking at the fundamentals are things like transaction count and value, active addresses, paid fees, hash rate and amount staked. Project metrics to check out are whitepaper, team and competitors. Financial metrics to check out are market capitalization, liquidity and volume and supply mechanism.</string>
    <string name="dca_text"><b>Dollar cost averaging (DCA)</b> is a strategy where an investor invests a total sum of money in small increments over time instead of all at once. The goal is to take advantage of market downturns without risking too much capital at any given time. DCA is designed to help offset any negative effect on an investment caused by short-term market volatility. If the price of an asset drops during the time you are dollar-cost averaging, then you stand to make a profit if the price moves back up.</string>
    <string name="dca1_text">If you’re not a professional market watcher, DCA can save you the effort of trying to time the market to get the best stock prices. It’s a tool for investing slowly and consistently that aims to protect against the human tendency to want to gain all at once.</string>
    <string name="buy_text">Most beginners think of buying a coin because it\'s price seems <b>low</b> or seems to be <b>affordable</b>. The decision to invest in a coin should have little affordability but a lot to do with its market cap.</string>
    <string name="buy1_text">There is no difference between having a coin priced at $10 per coin with a total number of 1 million shares in the market and the same coin being priced at $100 with 100,000 shares in the market. For this reason, it is more justifiable to use a coin’s market cap to decide whether or not to invest in it than using its price. The higher a coin’s market cap, the more suitable it is for investment.</string>
    <string name="lines_text"><b>Chart lines</b> can be diagonal or horizontal lines drawn on charts. They connect specific data points, making it easier for chartists and traders to visualize price movements and identify market trends.</string>
    <string name="lines1_text">They work like support and resistance levels. We can divide them into two basic categories: <b>ascending (uptrend)</b> and <b>descending (downtrend)</b>. \n<b>Uptrend line</b> is drawn from a lower to a higher chart position. It connects two or more low points.</string>
    <string name="lines2_text"><b>Downtrend</b> line is drawn from a higher to lover chart position. It connects two or more high points.</string>
    <string name="patterns1_text">Patterns that emerge over a longer period of time generally are more reliable, with larger moves resulting once price breaks out of the pattern. Therefore, a pattern that develops on a daily chart is expected to result in a larger move than the same pattern observed on an intraday chart, such as a one-minute chart.</string>
    <string name="patterns_text"><b>Price patterns</b> appear when traders are buying and selling at certain levels, and therefore, price oscillates between these levels, creating chart patterns. When price finally does break out of the price pattern, it can represent a significant change in sentiment.</string>
    <string name="patterns2_text">There is 16 different patterns and they all 2 types of signal which is reversal or continuation of a trend. These patterns are <b>dubble bottom/top</b>, <b>Head and Shoulders</b>, <b>Wedge</b>, <b>Rectangle</b>, <b>Pennant</b> and <b>Triangle</b>.</string>
    <string name="nav_set">Settings</string>
    <string name="text_settings">Settings</string>
    <string name="currency">Currency</string>
    <string name="portfolio_balance">Portfolio Balance</string>
    <string-array name="currencies">
        <item>$</item>
        <item>€</item>
    </string-array>
</resources>