<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:background="@drawable/rounded_frames"
    tools:context=".AnalysisFragments.IndicatorsFragment">

    <ScrollView
        android:id="@+id/scrollView5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imageView2"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="5dp"
                    android:justificationMode="inter_word"
                    android:text="@string/fibonaci_text"
                    android:textColor="@color/fonts"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView15"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="5dp"
                    android:justificationMode="inter_word"
                    android:text="@string/ma_text"
                    android:textColor="@color/fonts"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView17"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="5dp"
                    android:justificationMode="inter_word"
                    android:text="@string/rsi_text"
                    android:textColor="@color/fonts"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView18"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="5dp"
                    android:justificationMode="inter_word"
                    android:text="@string/bb_text"
                    android:textColor="@color/fonts"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="65dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="5dp"
                    android:justificationMode="inter_word"
                    android:text="@string/indicators_text"
                    android:textColor="@color/fonts"
                    android:textSize="17sp" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="186dp"
                    android:layout_height="121dp"
                    android:layout_below="@id/textView14"
                    android:layout_centerInParent="true"
                    android:src="@drawable/candle" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/closeButton9"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@android:color/transparent"
        android:rotation="45"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_add_24"
        android:tint="@color/fonts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</FrameLayout>